# release_bot

./: .env.sample  .gitignore  Cargo.toml  README.md
src/: main.rs  types.rs
src/md/: mod.rs
