[package]
name = "release_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
octocrab = "0.17.0"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "builder",
] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
markdown = "1.0.0-alpha.3"
discord-md = "2.0.0"
